<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/progress_bar"
            layout="@layout/level_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/primary_text_light_nodisable"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <Button
            android:id="@+id/world_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/world"
            app:layout_constraintBottom_toTopOf="@+id/endless_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/endless_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/endless"
            app:layout_constraintBottom_toTopOf="@+id/minigames_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/minigames_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/minigames"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:background="#00FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_settings_32" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>